@@ -1,3 +1,10 @@
+Mon, 21 Jul 2008 23:33:26 +0200 <thp@perli.net>
+Fix problems with command-line mode not working correctly
+
+	* src/gpodder/console.py: Fix problems with new code when using
+	"gpodder --run"; thanks to Mykola Nikishov <mn@mn.com.ua> for
+	reporting this bug on the Debian Bug Tracker (#491696)
+
 Sun, 20 Jul 2008 10:42:22 +0200 <jerome.chabod@ifrance.com>
 Make episodes selector's columns sortable (bug #146)
 	* src/gpodder/gui.py: make columns sortable Add a index's column to 
